--- a/{{ cookiecutter.project_name }}/src/application/{{cookiecutter.app_name}}/commons/templates/swagger.j2
+++ b/{{ cookiecutter.project_name }}/src/application/{{cookiecutter.app_name}}/commons/templates/swagger.j2
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf8">
-    <title>{{cookiecutter.project_name}} - Swagger</title>
+    <title>{{cookiecutter.app_name}} - Swagger</title>
     <link rel="stylesheet" type="text/css" href="//unpkg.com/swagger-ui-dist@3.23.4/swagger-ui.css">
     <style>
       html
